--- a/gavel/templates/vote.html
+++ b/gavel/templates/vote.html
@@ -30,6 +30,7 @@
   <div class="info">
     <form action="/vote" method="post">
       <p class="center">Which one is better?</p>
+      <p id="time" class="center"></p>
       <input type="submit" name="action" value="Previous" id="vote-previous" class="button-left">
       <input type="submit" name="action" value="Current" id="vote-current" class="button-right">
       <input type="submit" name="action" value="Skip" id="vote-skip" class="button-full button-gap">
@@ -39,4 +40,30 @@
     </form>
   </div>
 </div>
+  <script>
+
+function startTimer(duration, display) {
+    var timer = duration, minutes, seconds;
+    setInterval(function () {
+        minutes = parseInt(timer / 60, 10);
+        seconds = parseInt(timer % 60, 10);
+
+        minutes = minutes < 10 ? "0" + minutes : minutes;
+        seconds = seconds < 10 ? "0" + seconds : seconds;
+
+        display.textContent = minutes + ":" + seconds;
+
+        if (--timer < 0) {
+            timer = duration;
+        }
+    }, 1000);
+}
+
+window.onload = function () {
+    var fiveMinutes = 60 * 3,
+        display = document.querySelector('#time');
+    startTimer(fiveMinutes, display);
+};
+
+  </script>
 {% endblock %}
