--- a/gavel/templates/vote.html
+++ b/gavel/templates/vote.html
@@ -30,7 +30,7 @@
   <div class="info">
     <form action="/vote" method="post">
       <p class="center">Which one is better?</p>
-      <p id="time" class="center"></p>
+      <p id="time" class="center" style="font-size:2em; margin:auto"></p>
       <input type="submit" name="action" value="Previous" id="vote-previous" class="button-left">
       <input type="submit" name="action" value="Current" id="vote-current" class="button-right">
       <input type="submit" name="action" value="Skip" id="vote-skip" class="button-full button-gap">
