--- a/gavel/templates/vote.html
+++ b/gavel/templates/vote.html
@@ -60,9 +60,9 @@ function startTimer(duration, display) {
 }
 
 window.onload = function () {
-    var fiveMinutes = 60 * 3,
+    var threeMinutes = 60 * 3,
         display = document.querySelector('#time');
-    startTimer(fiveMinutes, display);
+    startTimer(threeMinutes, display);
 };
 
   </script>
