--- a/gavel/templates/vote.html
+++ b/gavel/templates/vote.html
@@ -56,6 +56,9 @@ function startTimer(duration, display) {
         } else {
           display.textContent = minutes + ":" + seconds;
         }
+        if (--timer < 0) {
+            timer = duration;
+        }
     }, 1000);
 }
 
