--- a/gavel/templates/vote.html
+++ b/gavel/templates/vote.html
@@ -48,16 +48,15 @@ function startTimer(duration, display) {
         minutes = parseInt(timer / 60, 10);
         seconds = parseInt(timer % 60, 10);
 
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        seconds = seconds < 10 ? "0" + seconds : seconds;
+        minutes = minutes < 10 && minutes > 0 ? "0" + minutes : minutes;
+        seconds = seconds < 10 && seconds > 0 ? "0" + seconds : seconds;
 
-        if (minutes === 0 && seconds === 0) {
-          display.textContent = "Please move to the next project."
+        if (minutes <= 0 && seconds <= 0) {
+          display.textContent = "Please move on to the next project."
         } else {
           display.textContent = minutes + ":" + seconds;
         }
         if (--timer < 0) {
-            timer = duration;
         }
     }, 1000);
 }
